--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </ul>
     </div>
     <div class="welcome-photo">
-      <img src="polaroid2.png" alt="Couple Photo">
+      <img src="images/polaroid2.png" alt="Couple Photo">
     </div>
   </div>
 </section>
