--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 </section>
 
 <div class="rsvp-wrap" style="text-align:center; margin:80px 0 40px;">
-  <a class="rsvp-btn" href="file:///C:/Users/evgenia.pavlenko/Downloads/website/rsvp.html" target="_blank" rel="noopener"
+  <a class="rsvp-btn" href="https://evgenia12.github.io/wedding/rsvp.html" target="_blank" rel="noopener"
      style="display:inline-block; padding:20px 60px; background:#123463; color:#fff;
             border-radius:10px; text-decoration:none; font-weight:700; font-size:1.3rem;
             transition:background .2s ease, box-shadow .3s ease;">RSVP</a>
