--- a/rsvp.html
+++ b/rsvp.html
@@ -16,7 +16,7 @@
     margin: 0;
     font-family: 'Playfair Display', serif;
     color: var(--navy);
-    background: url('RSVP Background no Text.png') center top no-repeat fixed;
+    background: url('images/background-no-text-RSVP.png') center top no-repeat fixed;
     background-size: cover;
   }
   .page {
