--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ body {
 </section>
 
 <footer>
-  <p>Thank you for celebrating with us. We can’t wait to see you in Manila!</p>
+  <p>© 2025 Afable. All rights reserved.</p>
 </footer>
 
 <script>
