--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ body {
 </section>
 
 <footer>
-  <p>© 2025 afable. All rights reserved.</p>
+  <p>© 2025 Afable. All rights reserved.</p>
 </footer>
 
 <script>
