--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ body {
 <p class="rsvp-note">
     Click the RSVP button below to let us know if you can join us:
   </p>
-<a class="rsvp-btn" href="https://evgenia12.github.io/wedding/rsvp.html" rel="noopener" target="_blank">RSVP</a>
+<a class="rsvp-btn" href="https://rsvp.afable.ca/" rel="noopener" target="_blank">RSVP</a>
 </div>
 <style>
   .rsvp-note {
