--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ body {
 <div class="gift-box">
 <h2 style="font-family:'Dancing Script',cursive;font-size:2rem;color:#4d6f93;margin-top:0.5rem;margin-bottom:1.2rem;">Gifts</h2>
 <p style="max-width:550px;margin:0 auto 1.2rem;line-height:1.6;color:#333;">Your presence is the greatest gift! If you wish to contribute, we would be deeply grateful for monetary gifts towards our honeymoon or wedding fund.</p>
-<a class="kofi-button" href="https://ko-fi.com/erikandgenia" target="_blank">
+<a class="kofi-button" href="https://ko-fi.com/afable" target="_blank">
 <img alt="Wedding gift icon" class="gift-icon" src="https://cdn-icons-png.flaticon.com/512/6003/6003841.png"/>
 <span>Contribute to Our Honeymoon Fund</span>
 </a>
