--- a/index.html
+++ b/index.html
@@ -562,11 +562,10 @@ body {
 </section><section>
 <h2>Where to Stay</h2>
 <ul>
-<li><strong>Bonifacio Global City (BGC):</strong> Modern, walkable hub with it all. Consider 
+<li><strong>Bonifacio Global City (BGC):</strong> Modern, walkable hub with it all — consider 
   <a href="https://www.sedahotels.com/hotel/view/1/seda-bgc" style="color: #002147; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Seda</a> 
   or 
-  <a href="https://www.redplanethotels.com/hotel/bgc-the-fort" style="color: #002147; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Red Planet</a> 
-  hotels</li>
+  <a href="https://www.redplanethotels.com/hotel/bgc-the-fort" style="color: #002147; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Red Planet</a></li>
 <li><strong>Makati:</strong> The business and shopping hub, known for great nightlife and hotels</li>
 <li><strong>Pasay:</strong> Conveniently located near the airport and Manila Bay</li>
 </ul>
