--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ body {
     <li>Inihaw: Grilled meats & seafood</li>
     <li>Pancit: Stir-fried noodles, a celebration staple</li>
   </ul>
-<h3>Must-Try Desserts &amp; Drinks</h3>
+<h3>Must-Try Desserts</h3>
 <ul>
 <li>Halo-Halo: Shaved ice with fruits & ube ice cream</li>
     <li>Buko Shake: Fresh coconut smoothie</li>
