--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ body {
 <p class="rsvp-note">
    <strong>Click the RSVP button below to confirm your attendance:</strong>
   </p>
-<a class="rsvp-btn" href="https://rsvp.afable.ca/" rel="noopener" target="_blank">RSVP</a>
+<a class="rsvp-btn" href="https://wedding.afable.ca/rsvp" rel="noopener" target="_blank">RSVP</a>
 </div>
 <style>
   .rsvp-note {
