--- a/index.html
+++ b/index.html
@@ -538,6 +538,9 @@ body {
 <section>
 <h2>Wedding Day Travel Tips</h2>
 <p>The wedding venue is in Rizal, about 35 km from Manila centre. Traffic in Manila can be unpredictable and heavy, especially during rush hour, so expect the drive to take at least <strong>1.5 hours</strong>. Plan to arrive early to avoid delays and travel stress.</p>
+<p style="text-align: center; font-weight: bold; font-size: 1.1em; color: #2a3a5e; margin-top: 15px; display: inline-block; border-bottom: 2px solid #2a3a5e; padding-bottom: 3px;">
+    Doors open at 3:00 PM and close at 3:30 PM. Late arrivals are welcome to join after the ceremony.
+  </p>
 </section><section class="timeline">
 <img alt="Wedding Timeline" src="images/wedding-timeline.jpg"/>
 </section>
