added ribbon instead of bottom padding to 'doors open' section

--- a/index.html
+++ b/index.html
@@ -162,6 +162,55 @@
     color: #123463;
   }
 
+
+
+
+/* HTML: <div class="ribbon">Your text content</div> */
+.ribbon {
+  font-size: 28px;
+  font-weight: bold;
+  color: #fff;
+}
+.ribbon {
+  --r: .5em;   /* control the cutout of the ribbon */
+  --s: 1.2em;  /* control the size of shape*/
+  --c: lightblue;
+  padding-inline: .6lh;
+  margin-block: calc(var(--s) - .15lh);
+  text-align: center;
+  line-height: 2;
+  background-image: 
+    linear-gradient(var(--c) 70%,#0000 0), 
+    linear-gradient(to bottom right,#0000 50%, color-mix(in srgb,var(--c),#000 40%) 51% 84%,#0000 85%);
+  background-position: 0 .15lh;
+  background-size: 100% 1lh;
+  clip-path: polygon(100% .15lh,.7lh .15lh,.7lh -999px,0 .15lh,.7lh .85lh,0 1lh,0 calc(100% - .15lh),calc(100% - .7lh) calc(100% - .15lh),calc(100% - .7lh) 999px,100% 999px,100% calc(100% - .15lh),calc(100% - .7lh) calc(100% - .85lh),100% calc(100% - 1lh));
+  position: relative;
+  width: fit-content;
+}
+.ribbon:before,
+.ribbon:after{
+  content:"";
+  position: absolute;
+  width: .7lh;
+  height: var(--s);
+  background: color-mix(in srgb,var(--c),#000 40%);
+}
+.ribbon:before {
+  bottom: calc(100% - .15lh);
+  left: 0;
+  clip-path: polygon(0 0,50% var(--r),100% 0,100% 100%,0 100%);
+}
+.ribbon:after {
+  top: calc(100% - .15lh);
+  right: 0;
+  clip-path: polygon(0 0,100% 0,100% 100%,50% calc(100% - var(--r)),0 100%);
+}
+
+
+
+
+
 /* Medium spacing for FAQ area (Dress Code → What to Eat in Manila) */
 .faq-sections section {
   padding: 1.6rem 1.2rem !important;
@@ -538,9 +587,9 @@ body {
 <section>
 <h2>Wedding Day Travel Tips</h2>
 <p>The wedding venue is in Rizal, about 35 km from Manila centre. Traffic in Manila can be unpredictable and heavy, especially during rush hour, so expect the drive to take at least <strong>1.5 hours</strong>. Plan to arrive early to avoid delays and travel stress.</p>
-<p style="text-align: center; font-weight: bold; font-size: 1.1em; color: #2a3a5e; margin-top: 15px; display: inline-block; border-bottom: 2px solid #2a3a5e; padding-bottom: 3px;">
-    Doors open at 3:00 PM and close at 3:30 PM. Late arrivals are welcome to join after the ceremony.
-  </p>
+<p class="ribbon" style="text-align: center; font-weight: bold; font-size: 1.1em; color: #2a3a5e; margin-top: 15px; display: inline-block; padding-bottom: 3px;">
+Doors open at 3:00 PM & close at 3:30 PM.<br />Late arrivals are welcome after the ceremony.
+</p>
 </section><section class="timeline">
 <img alt="Wedding Timeline" src="images/wedding-timeline.jpg"/>
 </section>
