--- a/index.html
+++ b/index.html
@@ -209,6 +209,26 @@
 
 
 
+img.icon {
+  width: 10%;
+  height: auto; /* Or a fixed height */
+  object-fit: cover; /* How the image fills the defined aspect ratio box */
+  filter: invert(40%) sepia(54%) saturate(305%) hue-rotate(160deg) brightness(97%) contrast(89%);
+}
+
+img.icon-small {
+  width: 5%;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+  height: auto; /* Or a fixed height */
+  object-fit: cover; /* How the image fills the defined aspect ratio box */
+  filter: invert(40%) sepia(54%) saturate(305%) hue-rotate(160deg) brightness(97%) contrast(89%);
+  vertical-align: middle;
+}
+
+
+
+
 
 
 /* Medium spacing for FAQ area (Dress Code → What to Eat in Manila) */
@@ -597,6 +617,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 <div style="text-align:center;">
 <h2 class="faq-title">FAQ</h2>
 </div><div class="faq-sections"><section>
+<img class="icon" src="images/icons/dress.png" />
 <h2>Dress Code</h2>
 <ul>
   <li><strong>Attire:</strong> Formal or semi-formal (no casual wear)</li>
@@ -605,6 +626,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
   <li><strong>Men:</strong> Suit or Barong Tagalog</li>
 </ul>
 </section><section>
+<img class="icon" src="images/icons/cloudy.png" />
 <h2>Weather in January</h2>
 <ul>
 <li>Sunny days with mild temperatures around 24–30°C (75–86°F)</li>
@@ -612,6 +634,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 <li>Pack a light layer for the occasional cool evening</li>
 </ul>
 </section><section>
+<img class="icon" src="images/icons/resort.png" />
 <h2>Where to Stay</h2>
 <ul>
 <li><strong>Bonifacio Global City (BGC):</strong> Modern, walkable hub with it all — consider 
@@ -623,6 +646,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 </ul>
 </section>
 <section>
+<img class="icon" src="images/icons/tourist.png" />
 <h2>Things to Do in Manila</h2>
 <ul>
 <li><strong>Intramuros:</strong> Historic walled city with cobblestone streets</li>
@@ -633,22 +657,24 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
     <li><strong>Bonifacio Global City (BGC):</strong> Trendy district for dining, shopping, and nightlife</li>
 </ul>
 </section><section>
+<img class="icon" src="images/icons/destination.png" />
 <h2>Explore Beyond Manila</h2>
 
-  <h3>Tropical Islands — just a 1-hour flight away</h3>
+<h3>Tropical Islands — just a 1-hour flight away<img class="icon-small" src="images/icons/airplane.png" /></h3>
   <ul>
     <li><strong>Palawan:</strong> Stunning lagoons and island-hopping in El Nido and Coron</li>
     <li><strong>Boracay:</strong> World-famous white-sand beaches and lively nightlife</li>
   </ul>
 
-  <h3>Day or Weekend Road Trips from Manila</h3>
+  <h3><img class="icon-small" src="images/icons/car.png" />Day or Weekend Road Trips from Manila</h3>
   <ul>
     <li><strong>Tagaytay:</strong> Cool climate with scenic views of Taal Volcano and Lake</li>
     <li><strong>Batangas:</strong> Mountain scenery and Laiya Beach (2–3.5-hour drive)</li>
   </ul>
 </section><section>
+<img class="icon" src="images/icons/cutlery.png" />
 <h2>What to Eat in the Philippines</h2>
-<h3>Filipino Favorites</h3>
+<h3 style="padding-left: 2em;">Filipino Favorites<img class="icon-small" style="width: 6%; margin-top: -0.3em" src="images/icons/spaghetti.png" /></h3>
 <ul>
 <li>Adobo: Soy-vinegar braised chicken or pork</li>
     <li>Sinigang: Tangy tamarind soup</li>
@@ -658,7 +684,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
     <li>Inihaw: Grilled meats & seafood</li>
     <li>Pancit: Stir-fried noodles, a celebration staple</li>
   </ul>
-<h3>Must-Try Desserts</h3>
+<h3><img class="icon-small" style="margin-top: -0.5em" src="images/icons/panna-cotta.png" />Must-Try Desserts</h3>
 <ul>
 <li>Halo-Halo: Shaved ice with fruits & ube ice cream</li>
     <li>Buko Shake: Fresh coconut smoothie</li>
@@ -669,12 +695,12 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
     <li>Turon: Fried banana spring roll</li>
     <li>Pandesal: Soft bread roll, sweet or savory</li>
     <li>Carabao Mango: Often called the world’s best</li></ul>
-<h3>Local Fast Food</h3>
+<h3 style="padding-left: 1em">Local Fast Food<img class="icon-small" style="margin-top: -0.4em" src="images/icons/hamburger.png" /></h3>
 <ul>
 <li>Jollibee: Iconic Filipino fast food</li>
     <li>Mang Inasal: Grilled chicken & unlimited rice</li>
     <li>Chowking: Filipino-Chinese comfort meals</li></ul>
-<h3>Traditional Breakfast</h3>
+<h3><img class="icon-small" style="width: 6%; margin-top: -1em" src="images/icons/fried-rice1.png" />Traditional Breakfast</h3>
 <ul>
 <li>Tapsilog: Beef, egg & garlic rice</li>
     <li>Longsilog: Sweet sausage, egg & garlic rice</li>
