--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 <img class="icon" src="images/icons/destination.png" />
 <h2>Explore Beyond Manila</h2>
 
-<h3>Tropical Islands 1-hour flight away<img class="icon-small" src="images/icons/airplane.png" /></h3>
+<h3><img class="icon-small" src="images/icons/airplane.png" />Tropical Islands 1-hr flight away</h3>
   <ul>
     <li><strong>Palawan:</strong> Stunning lagoons and island-hopping in El Nido and Coron</li>
     <li><strong>Boracay:</strong> World-famous white-sand beaches and lively nightlife</li>
@@ -727,7 +727,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 </section><section>
 <img class="icon" src="images/icons/cutlery.png" />
 <h2>What to Eat in the Philippines</h2>
-<h3 style="padding-left: 2em;">Filipino Favorites<img class="icon-small icon-small-width-6 icon-small-margin-top-3" src="images/icons/spaghetti.png" /></h3>
+<h3><img class="icon-small icon-small-width-6 icon-small-margin-top-3" src="images/icons/spaghetti.png" />Filipino Favorites</h3>
 <ul>
 <li>Adobo: Soy-vinegar braised chicken or pork</li>
     <li>Sinigang: Tangy tamarind soup</li>
@@ -748,7 +748,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
     <li>Turon: Fried banana spring roll</li>
     <li>Pandesal: Soft bread roll, sweet or savory</li>
     <li>Carabao Mango: Often called the world’s best</li></ul>
-<h3 style="padding-left: 1em">Local Fast Food<img class="icon-small icon-small-margin-top-4" src="images/icons/hamburger.png" /></h3>
+<h3><img class="icon-small icon-small-margin-top-4" src="images/icons/hamburger.png" />Local Fast Food</h3>
 <ul>
 <li>Jollibee: Iconic Filipino fast food</li>
     <li>Mang Inasal: Grilled chicken & unlimited rice</li>
