invert banner so it pops

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 .ribbon {
   --r: .5em;   /* control the cutout of the ribbon */
   --s: 1.2em;  /* control the size of shape*/
-  --c: lightblue;
+  --c: #2a3a5e;
   padding-inline: .6lh;
   margin-block: calc(var(--s) - .15lh);
   text-align: center;
@@ -660,7 +660,7 @@ body {
 <section>
 <h2>Wedding Day Travel Tips</h2>
 <p>The wedding venue is in Rizal, about 35 km from Manila centre. Traffic in Manila can be unpredictable and heavy, especially during rush hour, so expect the drive to take at least <strong>1.5 hours</strong>. Plan to arrive early to avoid delays and travel stress.</p>
-<p class="ribbon" style="text-align: center; font-weight: bold; font-size: 0.9em; color: #2a3a5e; margin-top: 15px; display: inline-block; padding-bottom: 3px;">
+<p class="ribbon" style="text-align: center; font-weight: bold; font-size: 0.9em; color: #f1f6f8; margin-top: 15px; display: inline-block; padding-bottom: 3px;">
 Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the ceremony.
 </p>
 </section><section class="timeline">
