shorten tropical island text

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 <img class="icon" src="images/icons/destination.png" />
 <h2>Explore Beyond Manila</h2>
 
-<h3>Tropical Islands 1-hr flight away<img class="icon-small" src="images/icons/airplane.png" /></h3>
+<h3>Tropical Islands 1-hr away<img class="icon-small" src="images/icons/airplane.png" /></h3>
   <ul>
     <li><strong>Palawan:</strong> Stunning lagoons and island-hopping in El Nido and Coron</li>
     <li><strong>Boracay:</strong> World-famous white-sand beaches and lively nightlife</li>
