fix transitions fade in move up after slight delay

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
   }
   section {
     opacity: 0;
-    transform: translateY(15px);
+    transform: translateY(0);
     transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
     padding: 3rem 2rem;
     text-align: center;
     max-width: 1000px;
@@ -44,7 +45,9 @@
   }
   section.visible {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-1em);
+    transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
   }
   h2 {
     font-family: 'Dancing Script', cursive;
@@ -88,13 +91,15 @@
     flex-wrap: wrap;
     gap: 2rem;
     opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 1.2s ease, transform 1.2s ease;
-    transition-delay: 0.2s;
+    transform: translateY(0);
+    transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
   }
   .welcome-container.visible {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-1em);
+    transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
   }
   .welcome-text {
     flex: 1 1 400px;
@@ -272,6 +277,7 @@ section + .timeline {
   /* Snappier animation for RSVP, Gift Fund, and QR sections */
   .snappy {
     transition: opacity 0.8s ease, transform 0.8s ease !important;
+    transition-delay: 0.4s;
   }
 
 
@@ -463,8 +469,9 @@ body {
   }
   section {
     opacity: 0;
-    transform: translateY(15px);
+    transform: translateY(0);
     transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
     padding: 3rem 2rem;
     text-align: center;
     max-width: 1000px;
@@ -472,7 +479,9 @@ body {
   }
   section.visible {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-1em);
+    transition: opacity 1.1s ease, transform 1.1s ease;
+    transition-delay: 0.4s;
   }
   h2 {
     font-family: 'Dancing Script', cursive;
@@ -827,7 +836,7 @@ document.addEventListener('DOMContentLoaded', function() {
         slowObserver.unobserve(entry.target);
       }
     });
-  }, { threshold: 0.2 }); // 👈 Elegant delayed trigger
+  }, { threshold: 0.3 }); // 👈 Elegant delayed trigger
 
   const snappyObserver = new IntersectionObserver(entries => {
     entries.forEach(entry => {
