georgia font easier readability

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ img.icon-small-margin-top-1 {
 </style>
 <style>
 body {
-    font-family: 'Playfair Display', serif;
+    font-family: 'georgia', serif;
     color: #123463;
     background: url('images/background-no-text-splash.jpg') repeat-y center top;
     background-size: cover;
