--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@ section#welcome + section {
   }
   #gift-fund {
     padding: 2rem 1rem !important;
-    margin-top: 1.5rem !important;
+    margin-top: 5rem !important;
+    margin-bottom: 1rem !important;
   }
   #gift-fund p {
     font-size: 0.95rem !important;
@@ -410,7 +411,7 @@ section#welcome + section {
     padding: 0 1rem;
   }
   footer {
-    padding: 30px 1rem !important;
+    padding: 0 30px 1rem 30px !important;
     font-size: 0.9rem !important;
   }
   img.icon {
@@ -564,7 +565,7 @@ body {
 
   footer {
     text-align: center;
-    padding: 40px;
+    padding: 0 40px 40px 40px;
     font-size: 0.95rem;
     color: #123463;
   }
@@ -574,7 +575,7 @@ body {
     text-align: center;
     padding: 2.2rem 1rem 3rem;
     background-color: rgba(176, 208, 242, 0.35);
-    margin-top: 40px;
+    margin-top: 5rem;
     border-radius: 12px;
   }
   #gift-fund h2 {
@@ -592,7 +593,8 @@ body {
   .gift-options {
     display: flex;
     justify-content: center;
-    margin-top: 1.8rem;
+    margin-top: 0rem;
+    padding-top: 0rem;
   }
   .kofi-button {
     display: flex;
@@ -810,7 +812,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the 
 <section class="section" id="gift-fund">
 <div class="gift-options">
 <div class="gift-box">
-<h2 style="font-family:'Dancing Script',cursive;font-size:2rem;color:#4d6f93;margin-top:0.5rem;margin-bottom:1.2rem;">Gifts</h2>
+<h2 style="font-family:'Dancing Script',cursive;font-size:2rem;color:#4d6f93;margin-top:0px;margin-bottom:1.2rem;">Gifts</h2>
 <p style="max-width:550px;margin:0 auto 1.2rem;line-height:1.6;color:#333;">Your presence is the greatest gift! If you wish to contribute, we would be deeply grateful for monetary gifts towards our wedding & honeymoon fund.</p>
 <a class="kofi-button" href="https://ko-fi.com/afable" target="_blank">
 <img alt="Wedding gift icon" class="gift-icon" src="https://cdn-icons-png.flaticon.com/512/6003/6003841.png"/>
