--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     font-size: 2.5rem;
     color: #4d6f93;
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 1rem;
     position: relative;
     display: inline-block;
     letter-spacing: 0.5px;
@@ -485,7 +485,8 @@ body {
     transition-delay: 0.2s;
     padding: 3rem 2rem;
     text-align: center;
-    max-width: 1000px;
+    width: 80vw;
+    max-width: 900px;
     margin: 0 auto;
   }
   section.visible {
@@ -688,7 +689,7 @@ body {
 <h2>Wedding Day Travel Tips</h2>
 <p>The wedding venue is in Rizal, about 35 km from Manila centre. Traffic in Manila can be unpredictable and heavy, especially during rush hour, so expect the drive to take at least <strong>1.5 hours</strong>. Plan to arrive early to avoid delays and travel stress.</p>
 <p class="ribbon" style="text-align: center; font-weight: bold; font-size: 0.9em; color: #f1f6f8; margin-top: 15px; display: inline-block; padding-bottom: 3px;">
-Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals are welcome after the ceremony.
+Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals welcome after the ceremony.
 </p>
 </section><section class="timeline">
 <img alt="Wedding Timeline" src="images/wedding-timeline.jpg"/>
