--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@ body {
   }
   .rsvp-btn:hover {
     box-shadow:2px 2px 4px 2px rgba(18,52,99,0.5);
-    background-color: #ddf;
-    color: #123463;
+    background-color: #2a4873;
+    color: #fff;
     transform: translateY(-2px);
     transition: all 0.3s ease;
 
