--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals welcome after ceremony
 <img alt="Wedding gift icon" class="gift-icon" src="https://cdn-icons-png.flaticon.com/512/6003/6003841.png"/>
 <span>Contribute to Our Honeymoon Fund</span>
 </a>
+<p style="max-width:550px;margin:0 auto;line-height:1.6;color:#333;padding-top:1rem">If you prefer to contribute by e-transfer, please use this email ♥:<br />wedding@afable.ca</p>
 </div>
 </div></section>
 <!-- Share Your Photos Section (QR centered above text, cursive title, no background box) -->
