--- a/rsvp.html
+++ b/rsvp.html
@@ -233,7 +233,8 @@ XMu5: 'https://forms.gle/zzjSQkbxMbmHcXMu5',
 ibbA: 'https://forms.gle/SxtF4cwvQP1sHibbA',
 AQAA: 'https://forms.gle/gaPMRMaf6pdnzAQAA',
 ghu8: 'https://forms.gle/ZQ2ZXeMaysDgighu8',
-SZG6: 'https://forms.gle/H1LeBBGKrQnYQSZG6'
+SZG6: 'https://forms.gle/H1LeBBGKrQnYQSZG6',
+jJp6: 'https://forms.gle/TMUR7w4DK6jAm6Jp6'
 };
 
 function checkPassword() {
