--- a/rsvp.html
+++ b/rsvp.html
@@ -234,7 +234,8 @@ ibbA: 'https://forms.gle/SxtF4cwvQP1sHibbA',
 AQAA: 'https://forms.gle/gaPMRMaf6pdnzAQAA',
 ghu8: 'https://forms.gle/ZQ2ZXeMaysDgighu8',
 SZG6: 'https://forms.gle/H1LeBBGKrQnYQSZG6',
-jJp6: 'https://forms.gle/TMUR7w4DK6jAm6Jp6'
+jJp6: 'https://forms.gle/TMUR7w4DK6jAm6Jp6',
+SGE8: 'https://forms.gle/mXMQhGeV6SGUqSGE8'
 };
 
 function checkPassword() {
