--- a/rsvp.html
+++ b/rsvp.html
@@ -235,7 +235,9 @@ AQAA: 'https://forms.gle/gaPMRMaf6pdnzAQAA',
 ghu8: 'https://forms.gle/ZQ2ZXeMaysDgighu8',
 SZG6: 'https://forms.gle/H1LeBBGKrQnYQSZG6',
 jJp6: 'https://forms.gle/TMUR7w4DK6jAm6Jp6',
-SGE8: 'https://forms.gle/mXMQhGeV6SGUqSGE8'
+SGE8: 'https://forms.gle/mXMQhGeV6SGUqSGE8',
+H5L6: 'https://forms.gle/PHPARRwrk1ivcH5L6',
+ANV9: 'https://forms.gle/XJd94odpHW3JoANV9'
 };
 
 function checkPassword() {
