--- a/rsvp.html
+++ b/rsvp.html
@@ -237,7 +237,10 @@ SZG6: 'https://forms.gle/H1LeBBGKrQnYQSZG6',
 jJp6: 'https://forms.gle/TMUR7w4DK6jAm6Jp6',
 SGE8: 'https://forms.gle/mXMQhGeV6SGUqSGE8',
 H5L6: 'https://forms.gle/PHPARRwrk1ivcH5L6',
-ANV9: 'https://forms.gle/XJd94odpHW3JoANV9'
+ANV9: 'https://forms.gle/XJd94odpHW3JoANV9',
+NyY9: 'https://forms.gle/LfZcrRFCzHkdCNyY9',
+H117: 'https://forms.gle/vPqEqDp4kdV3XH117',
+CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8'
 };
 
 function checkPassword() {
