--- a/rsvp.html
+++ b/rsvp.html
@@ -240,7 +240,8 @@ H5L6: 'https://forms.gle/PHPARRwrk1ivcH5L6',
 ANV9: 'https://forms.gle/XJd94odpHW3JoANV9',
 NyY9: 'https://forms.gle/LfZcrRFCzHkdCNyY9',
 H117: 'https://forms.gle/vPqEqDp4kdV3XH117',
-CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8'
+CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8',
+X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8'
 };
 
 function checkPassword() {
