--- a/rsvp.html
+++ b/rsvp.html
@@ -241,7 +241,8 @@ ANV9: 'https://forms.gle/XJd94odpHW3JoANV9',
 NyY9: 'https://forms.gle/LfZcrRFCzHkdCNyY9',
 H117: 'https://forms.gle/vPqEqDp4kdV3XH117',
 CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8',
-X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8'
+X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8',
+qby6: 'https://forms.gle/xMMj4Vun9FTgjqby6'
 };
 
 function checkPassword() {
