--- a/rsvp.html
+++ b/rsvp.html
@@ -242,7 +242,8 @@ NyY9: 'https://forms.gle/LfZcrRFCzHkdCNyY9',
 H117: 'https://forms.gle/vPqEqDp4kdV3XH117',
 CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8',
 X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8',
-qby6: 'https://forms.gle/xMMj4Vun9FTgjqby6'
+qby6: 'https://forms.gle/xMMj4Vun9FTgjqby6',
+was9: 'https://forms.gle/roBLnKELjfovowas9'
 };
 
 function checkPassword() {
