--- a/index.html
+++ b/index.html
@@ -737,7 +737,17 @@ Doors open at 3 PM & close at 3:30 PM.<br />Late arrivals welcome after ceremony
     <li><strong>Mall of Asia:</strong> Local go-to for dining, entertainment, and cooling off</li>
     <li><strong>Bonifacio Global City (BGC):</strong> Trendy district for dining, shopping, and nightlife</li>
 </ul>
-</section><section>
+</section>
+
+<section>
+<img class="icon" src="images/icons/book.png" />
+<h2>Need Help Booking?</h2>
+<p style="max-width:550px;margin:0 auto 1.2rem;line-height:1.6;color:#333;">If you'd like help to book your trip (airfare, hotels and transportation), feel free to reach out to <strong>Jamey Guerrero</strong>.<br /><br />
+Email: Neil.Guerrero@Fora.Travel<br />Phone: 604-617-7331
+</p>
+</section>
+
+<section>
 <img class="icon" src="images/icons/destination.png" />
 <h2>Explore Beyond Manila</h2>
 
