--- a/rsvp.html
+++ b/rsvp.html
@@ -244,7 +244,8 @@ CmU8: 'https://forms.gle/YGueuUqv39FfaCmU8',
 X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8',
 qby6: 'https://forms.gle/xMMj4Vun9FTgjqby6',
 was9: 'https://forms.gle/roBLnKELjfovowas9',
-z45A: 'https://forms.gle/6zAyy1ptQfB6Cz45A'
+z45A: 'https://forms.gle/6zAyy1ptQfB6Cz45A',
+KnL8: 'https://forms.gle/K7Q1XAyzoRRbuKnL8'
 };
 
 function checkPassword() {
