--- a/rsvp.html
+++ b/rsvp.html
@@ -245,7 +245,8 @@ X1n8: 'https://forms.gle/KGKRGhgBFBQodX1n8',
 qby6: 'https://forms.gle/xMMj4Vun9FTgjqby6',
 was9: 'https://forms.gle/roBLnKELjfovowas9',
 z45A: 'https://forms.gle/6zAyy1ptQfB6Cz45A',
-KnL8: 'https://forms.gle/K7Q1XAyzoRRbuKnL8'
+KnL8: 'https://forms.gle/K7Q1XAyzoRRbuKnL8',
+CW99: 'https://forms.gle/95gPh7JnWgm8rCW99'
 };
 
 function checkPassword() {
